--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8381,6 +8381,20 @@ body {
   margin-right: 8px;
 }
 
+/* Notifications badge */
+
+.notifications-badge {
+  margin-top: -1;
+}
+
+.notifications-badge .badge-fade {
+  background-color: #EBE8E8;
+}
+
+.notifications-badge .badge-hint {
+  background-color: #d15b47 !important;
+}
+
 /* Sticky footer styles */
 
 html {
